Fixed dark mode bug (#139)
* fixed bug #130

* Delete package-lock.json

* Delete vocascan.config.js

* updated package lock.json

--- a/src/Components/Nav/TopNav.scss
+++ b/src/Components/Nav/TopNav.scss
@@ -75,7 +75,7 @@
     p {
       margin-left: 15px;
       font-size: 16px;
-      color: $color-main-text;
+      color: $color-main-text-inverse;
     }
   }
 }
